[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh"
version = "0.1.0"
authors = [
  { name="Arnav Das", email="arnav.das88@gmail.com" },
]
description = "A small mesh package for Fastapi"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]",
    "websockets",
    "pydantic",
    "pytest",
    "pytest-asyncio"
]
