[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh"
version = "0.1.0"
authors = [
  { name="Arnav Das", email="arnav.das88@gmail.com" },
  { name="Sumeet Jana", email="sumeetjana@icloud.com" }
]
description = "A small mesh package for Fastapi"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]",
    "websockets",
    "pydantic",
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools.packages.find]
where = ["mesh"]  # Points to the directory containing your packages
